fix: overflow 화면 크기 조절

--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ header .inner {
     width: 100vw;
     color: white;
     text-align: center;
+    overflow: hidden;
 }
 
 .stacks h1{
